# portfolio

./: .dockerignore  .gitattributes  .gitignore  Hamburg.ipynb  NOAAstormData-Cleaning-Visualizing.html  README.md  Weightlifting-Machine-Learning.html
auto-dash/: README.md  architecture.md  development_log.md  development_plan.md  pyproject.toml  vision.md
auto-dash/autodash/: __init__.py  charts.py  config.py  data.py  explorer.py  models.py  pipeline.py  planner.py
auto-dash/autodash/prompts/: __init__.py  analysis_planning.py  chart_planning.py  code_generation.py  data_exploration.py
auto-dash/plotlint/: __init__.py  config.py  elements.py  geometry.py  inspector.py  loop.py  models.py  renderer.py  scoring.py
auto-dash/plotlint/checks/: __init__.py  cutoff.py  overlap.py
auto-dash/plotlint/core/: __init__.py  config.py  errors.py  llm.py  parsing.py  sandbox.py
auto-dash/plotlint/extractors/: __init__.py  matplotlib.py
auto-dash/plotlint/prompts/: __init__.py
auto-dash/tests/: test_chart_prompts.py  test_charts.py  test_checks_cutoff.py  test_checks_overlap.py  test_convergence_graph.py  test_core_config.py  test_core_errors.py  test_core_parsing.py  test_core_sandbox.py  test_data_loading.py  test_data_profiling.py  test_elements.py  test_explorer.py  test_explorer_prompts.py  test_extractor_mpl.py  test_geometry.py  test_inspector.py  test_models.py  test_pipeline_graph.py  test_planner.py  test_planner_prompts.py  test_renderer.py  test_scoring.py
auto-dash/tests/test_data/: sample.csv
portfolio-rag-chat/: Cargo.toml  README.md  architecture.md  clean_docker.sh  development_log.md  development_plan.md  docker-compose-ingest.yaml  docker-compose.yaml  env-sample  project-vision.md
portfolio-rag-chat/crates/code-raptor/: Cargo.toml
portfolio-rag-chat/crates/code-raptor/src/: lib.rs  main.rs
portfolio-rag-chat/crates/code-raptor/src/ingestion/: language.rs  mod.rs  parser.rs  reconcile.rs
portfolio-rag-chat/crates/code-raptor/tests/: incremental_ingestion.rs
portfolio-rag-chat/crates/coderag-store/: Cargo.toml
portfolio-rag-chat/crates/coderag-store/src/: embedder.rs  lib.rs  vector_store.rs
portfolio-rag-chat/crates/coderag-types/: Cargo.toml
portfolio-rag-chat/crates/coderag-types/src/: lib.rs
portfolio-rag-chat/data/: test_queries.json
portfolio-rag-chat/dockerfile/: Dockerfile
portfolio-rag-chat/docs/: executive_summary.md  technical_summary.md
portfolio-rag-chat/src/: main.rs  models.rs
portfolio-rag-chat/src/api/: dto.rs  error.rs  handlers.rs  mod.rs  state.rs  web.rs
portfolio-rag-chat/src/engine/: config.rs  context.rs  generator.rs  intent.rs  mod.rs  retriever.rs
portfolio-rag-chat/src/harness/: dataset.rs  mod.rs
portfolio-rag-chat/src/ingestion/: mod.rs  parser.rs
portfolio-rag-chat/src/store/: embedder.rs  mod.rs  vector_store.rs
portfolio-rag-chat/static/: style.css
portfolio-rag-chat/templates/: base.html  chat.html
portfolio-rag-chat/templates/partials/: ingest_result.html  message.html  projects_list.html
quant-trading-gym/: 5.2 simulation_decomposition.md  5.3_feature_recording.md  5.5_tree_agents.md  5.6_centralised_ML_inference.md  6.1_full_features.md  6.2_full_ensemble.md  6.3_gym_environment.md  6.4_pyo3_bindings.md  Cargo.toml  README.md  current_plan.md  development_log.md  docker-compose.dev.yaml  docker-compose.frontend.yaml  docker-compose.tui.yaml  docker-compose.yaml  plan_price_realism.md  profiling_results.csv  project_plan.md  project_plan_vertical.md  shap_feature_engineering.md
quant-trading-gym/.github/: copilot-instructions.md
quant-trading-gym/crates/agents/: Cargo.toml
quant-trading-gym/crates/agents/src/: context.rs  lib.rs  ml_cache.rs  state.rs  tiers.rs  traits.rs
quant-trading-gym/crates/agents/src/strategies/: bollinger_reversion.rs  macd_crossover.rs  market_maker.rs  mod.rs  momentum.rs  noise_trader.rs  trend_follower.rs  vwap_executor.rs
quant-trading-gym/crates/agents/src/tier1/: mod.rs
quant-trading-gym/crates/agents/src/tier2/: agent.rs  mod.rs  sector_rotator.rs  (+1 more)
quant-trading-gym/crates/news/src/: config.rs  fundamentals.rs  generator.rs  lib.rs  sectors.rs
quant-trading-gym/crates/quant/: Cargo.toml
quant-trading-gym/crates/quant/src/: engine.rs  indicators.rs  lib.rs  risk.rs  stats.rs  tracker.rs
quant-trading-gym/crates/server/: Cargo.toml
quant-trading-gym/crates/server/src/: app.rs  hooks.rs  lib.rs  state.rs
quant-trading-gym/crates/sim-core/: Cargo.toml
quant-trading-gym/crates/sim-core/src/: batch_auction.rs  lib.rs  market.rs  matching.rs  order_book.rs
quant-trading-gym/crates/simulation/: Cargo.toml
quant-trading-gym/crates/simulation/src/: config.rs  hooks.rs  lib.rs  parallel.rs  runner.rs  sim_config.rs
quant-trading-gym/crates/simulation/tests/: agent_strategies.rs
quant-trading-gym/crates/storage/: Cargo.toml
quant-trading-gym/crates/storage/src/: comprehensive_features.rs  features.rs  hook.rs  lib.rs  parquet_writer.rs  recording_hook.rs  schema.rs
quant-trading-gym/crates/tui/: Cargo.toml
quant-trading-gym/crates/tui/src/: app.rs  lib.rs
quant-trading-gym/crates/types/src/: config.rs  features.rs  indicators.rs  lib.rs
quant-trading-gym/dockerfile/: Dockerfile.frontend  nginx.frontend.conf
quant-trading-gym/docs/: executive_summary.md  technical_summary.md
quant-trading-gym/frontend/: package.json  vite.config.ts
quant-trading-gym/frontend/src/: App.tsx  api.integration.test.ts  websocket.integration.test.ts
quant-trading-gym/frontend/src/components/: index.ts
quant-trading-gym/frontend/src/hooks/: index.ts  useWebSocket.ts
quant-trading-gym/frontend/src/pages/: ConfigPage.tsx  SimulationPage.tsx
quant-trading-gym/frontend/src/types/: api.ts  index.ts
quant-trading-gym/models/: deep_decision_tree.json  fast_gradient_boosted.json  medium_decision_tree.json  shallow_decision_tree.json  slow_gradient_boosted.json  small_random_forest.json
quant-trading-gym/scripts/: analyze_shap.py  check_parquet.py  scripts  train_config.yaml  train_trees.py
quant-trading-gym/src/: config.rs  main.rs
(+166 files in other folders)
