[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-dash"
version = "0.1.0"
description = "End-to-end data-to-dashboard pipeline with visual compliance engine"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "pandas>=2.3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.79"]
gemini = ["google-genai>=1.62"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "anthropic>=0.79",
    "google-genai>=1.62",
]

[tool.hatch.build.targets.wheel]
packages = ["plotlint", "autodash"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
