[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-dash"
version = "0.1.0"
description = "End-to-end data-to-dashboard pipeline with visual compliance engine"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "pandas>=2.3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.79"]
gemini = ["google-genai>=1.62"]
excel = ["openpyxl>=3.1"]
parquet = ["pyarrow>=14.0"]
all-formats = ["openpyxl>=3.1", "pyarrow>=14.0"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "anthropic>=0.79",
    "google-genai>=1.62",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plotlint", "autodash"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
