[package]
name = "portfolio-rag-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.27"
fastembed = "5.5"
lancedb = "0.23"
arrow-array = "57.1"
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"