[package]
name = "portfolio-rag-chat"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[dependencies]
rig-core = "0.27"
fastembed = "5.5"
lancedb = "0.23"
arrow-array = "56.2"
arrow-schema = "56.2"
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
streaming-iterator = "0.1"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3.31"

# Templating
askama = "0.15"

[dev-dependencies]
tempfile = "3.13"
