[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "portfolio-rag-chat"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[dependencies]
coderag-types = { path = "crates/coderag-types" }
coderag-store = { path = "crates/coderag-store" }

# LLM
rig-core = "0.27"

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Templating
askama = "0.15"

[dev-dependencies]
tempfile = "3.13"
