[workspace]
members = [
    "crates/types",
    "crates/sim-core",
    "crates/agents",
    "crates/simulation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomness
rand = "0.9"

# Internal crates
types = { path = "crates/types" }
sim-core = { path = "crates/sim-core" }
agents = { path = "crates/agents" }
simulation = { path = "crates/simulation" }

[package]
name = "quant-trading-gym"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
types.workspace = true
sim-core.workspace = true
agents.workspace = true
simulation.workspace = true
