[workspace]
members = [
    "crates/types",
    "crates/sim-core",
    "crates/quant",
    "crates/agents",
    "crates/simulation",
    "crates/tui",
    "crates/news",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomness
rand = "0.9"

# Internal crates
types = { path = "crates/types" }
sim-core = { path = "crates/sim-core" }
quant = { path = "crates/quant" }
agents = { path = "crates/agents" }
simulation = { path = "crates/simulation" }
tui = { path = "crates/tui" }
news = { path = "crates/news" }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"

[package]
name = "quant-trading-gym"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
types.workspace = true
sim-core.workspace = true
agents.workspace = true
simulation.workspace = true
tui.workspace = true
ratatui.workspace = true
crossterm.workspace = true
crossbeam-channel.workspace = true
rand.workspace = true
