[package]
name = "code-raptor"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[dependencies]
coderag-types = { path = "../coderag-types" }
coderag-store = { path = "../coderag-store" }

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
streaming-iterator = "0.1"
toml = "0.8"
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.48", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.13"
