[package]
name = "agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Agent traits and strategies for the quant-trading-gym simulation"

[dependencies]
types.workspace = true
sim-core.workspace = true
quant.workspace = true
news.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
