[package]
name = "quant"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Quantitative analysis - indicators, risk metrics, and statistical calculations"

[dependencies]
types.workspace = true
serde.workspace = true

[dev-dependencies]
# For testing with approximate floating point comparisons
