[package]
name = "simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Simulation runner for the quant-trading-gym"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
types.workspace = true
sim-core.workspace = true
agents.workspace = true
quant.workspace = true
news.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }
parking_lot.workspace = true
smallvec.workspace = true
