[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
types = { workspace = true }
simulation = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
