[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
types = { workspace = true }
simulation = { workspace = true }
quant = { workspace = true }  # V5.3: For AgentRiskSnapshot
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

# V5.3: Parquet recording
parquet = "57.2"
arrow = "57.2"
